--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,9 @@
 backend:
-  name: git-gateway
+  name: github
+  repo: https://github.com/gipsiesgowild/gipsiesgowild_blog
   branch: main
+  auth_type: implicit
+  oauth_client_id:
 
 media_folder: "assets/img/uploads"
 public_folder: "/assets/img/uploads"
