--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,9 +1,9 @@
 backend:
-  name: github
-  repo: https://github.com/gipsiesgowild/gipsiesgowild_blog
+  name: auth0
+  domain: dev-ff4jmdn5padvr5l0.us.auth0.com
+  client_id: Esiil1qUDjYYl84wzyVReEqL6NuFXsUe
+  repo: gipsiesgowild/gipsiesgowild_blog
   branch: main
-  auth_type: implicit
-  oauth_client_id:
 
 media_folder: "assets/img/uploads"
 public_folder: "/assets/img/uploads"
